Fix #4: support horizontal scroll bar

--- a/frameworks/xslt2/base/css/dbcookbook.css
+++ b/frameworks/xslt2/base/css/dbcookbook.css
@@ -55,6 +55,7 @@ p {
 code, .command, pre, .property,
 div.programlisting, div.screen {
   font-family:'Ubuntu Mono','DejaVu Sans Mono', monospace;
+  overflow-x: scroll;
 }
 
 /* Font Sizes */
